--- a/hogwarts/templates/hogwarts/houses.html
+++ b/hogwarts/templates/hogwarts/houses.html
@@ -15,7 +15,7 @@
             {% elif house.name == "Hufflepuff" %}
                 <img src="https://static.wikia.nocookie.net/harrypotter/images/0/06/Hufflepuff_ClearBG.png/revision/latest?cb=20161020182518" alt="Hufflepuff" class="house-image">
             {% elif house.name == "Ravenclaw" %}
-                <img src="https://static.wikia.nocookie.net/harrypotter/images/7/71/Ravenclaw_ClearBG.png/revision/latest?cb=20161020182442 alt="Ravenclaw" class="house-image">
+                <img src="https://static.wikia.nocookie.net/harrypotter/images/7/71/Ravenclaw_ClearBG.png/revision/latest?cb=20161020182442" alt="Ravenclaw" class="house-image">
             {% else %}
                 <img src="https://static.wikia.nocookie.net/harrypotter/images/a/ae/Hogwartscrest.png/revision/latest?cb=20110806202805" alt="Hogwarts" class="house-image">
             {% endif %}
