--- a/hogwarts/static/hogwarts/css/styles.css
+++ b/hogwarts/static/hogwarts/css/styles.css
@@ -8,6 +8,16 @@ body {
     line-height: 1.6;
 
     animation: fadeColor 1s ease-in-out;
+}   
+
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
 
 /* Only color and opacity transition */
