fix home page template

--- a/hogwarts/templates/hogwarts/home.html
+++ b/hogwarts/templates/hogwarts/home.html
@@ -10,7 +10,7 @@
         <div class="cta-buttons">
             <a href="{% url 'houses' %}" class="cta-btn">Discover Houses</a>
             <a href="{% url 'characters' %}" class="cta-btn">Meet the Characters</a>
-            <a href="{% url 'chat_with_character' 'harry-potter' %}" class="cta-btn">Chat with Harry</a>
+            <a href="{% url 'chat_with_character' 'harry-potter' %}" class="cta-btn">Chat with Hogwarts AI</a>
         </div>
     </div>
 
