update quiz feature

--- a/hogwarts/templates/hogwarts/quiz_result.html
+++ b/hogwarts/templates/hogwarts/quiz_result.html
@@ -9,7 +9,7 @@
         <p class="result-score">You scored <strong>{{ score }}</strong> out of 5!</p>
         
         {% if score >= 4 %}
-            <p class="result-message success">Brilliant! You truly know your Hogwarts lore!</p>
+            <p class="result-message success">Brilliant!</p>
         {% elif score == 3 %}
             <p class="result-message medium">Not bad! You're on your way to becoming a true wizard!</p>
         {% else %}
