--- a/hogwarts/templates/hogwarts/quiz.html
+++ b/hogwarts/templates/hogwarts/quiz.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 <div class="container my-5">
-    <h2 class="text-center mb-4">✨ Harry Potter Quiz ✨</h2>
+    <h2 class="text-center mb-4">✨ Movie Knowledge Quiz ✨</h2>
+    <p class="text-center" style="font-size: 1.2rem; color: #555;">
+        Test your knowledge about famous movies and cinema!
+    </p>    
     <form method="POST" class="quiz-form">
         {% csrf_token %}
         
