update quiz feature

--- a/hogwarts/templates/hogwarts/home.html
+++ b/hogwarts/templates/hogwarts/home.html
@@ -56,7 +56,7 @@
     <div class="quiz-section py-5">
         <div class="container">
             <h3>Test Your Knowledge!</h3>
-            <p>How well do you know the wizarding world? Take our quiz to test your Harry Potter knowledge!</p>
+            <p>Take our quiz to test your movies and cinematography knowledge!</p>
             <a href="{% url 'quiz' %}" class="cta-btn">Take the Quiz</a>
         </div>
     </div>
